--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cypress:run:record": "cypress run --record",
     "cypress:run:chrome": "cypress run --browser chrome",
     "cypress:run:headed": "cypress run --headed",
+    "cy2": "CYPRESS_API_URL=\"http://localhost:1234/\" cy2 run --parallel --record --key somekey --ci-build-id hello-cypress4",
     "dev": "run-p --race start:ci cypress:open",
     "start": "http-server -p $PORT -c-1",
     "start:ci": "http-server -p 8888 -c-1 --silent",
@@ -25,6 +26,7 @@
     "e2e": "cypress run"
   },
   "dependencies": {
+    "cy2": "1.3.0",
     "director": "1.2.8",
     "http-server": "0.12.3",
     "react": "0.13.3",
