--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "cypress:run:record": "cypress run --record",
     "cypress:run:chrome": "cypress run --browser chrome",
     "cypress:run:headed": "cypress run --headed",
-    "cy2": "CYPRESS_API_URL=\"http://localhost:1234/\" cy2 run --parallel --record --key somekey --ci-build-id hello-cypress4",
+    "cy2": "CYPRESS_API_URL=\"https://sorry-cypress-demo-director.herokuapp.com/\" cy2 run --parallel --record --key somekey --ci-build-id hello-cypress4",
     "dev": "run-p --race start:ci cypress:open",
     "start": "http-server -p $PORT -c-1",
     "start:ci": "http-server -p 8888 -c-1 --silent",
